<resources>
    <string name="app_name">2048</string>
    <string name="game_over_title">Game Over</string>
    <string name="mode_classic">classic</string>
    <string name="mode_blocks">blocks</string>
    <string name="mode_shuffle">shuffle</string>
    <string name="mode_exp_classic">The good old classic 2048</string>
    <string name="mode_exp_blocks">Random blocks will spawn in your board</string>
    <string name="mode_exp_shuffle">"Your board knows how to shuffle!! "</string>
    <string name="exponent_exp_2">try to get the \n2048 tile!</string>
    <string name="exponent_exp_3">try to get the \n177,147 tile!!</string>
    <string name="exponent_exp_4">try to get the \n4,194,304 tile!!!</string>
    <string name="exponent_exp_5">try to get the \n48,828,125 tile!!!!</string>
    <string name="best_score">best :</string>
    <string name="start">start!</string>
    <string name="end_tutorial">end tutorial</string>
    <string name="shuffle">shuffle!!!</string>
    <string name="new_game">new game</string>
    <string name="Score_board">Score Board</string>
    <string name="choose_game_mode">Choose Game Mode</string>
    <string name="choose_board_size">choose board size</string>
    <string name="square">square</string>
    <string name="rectangle">rectangle</string>
    <string name="choose_exponent">Choose Exponent</string>
    <string name="play">play!</string>
    <string name="next">next</string>
    <string name="settings">Settings</string>
    <string name="music">Music</string>
    <string name="sound">Sound</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="close">Close</string>
    <string name="your_score">your score</string>
    <string name="play_again">Play Again</string>
    <string name="tutorial_first_line">How to play:\nSwipe Up / Down / left / right to move the tiles across the board</string>
    <string name="tutorial_second_line">GOOD!! \nTwo identical tiles will merge when they collide, try to merge the tiles</string>
    <string name="tutorial_third_line">Perfect!!\nContinue to merge the tiles and try to get a higher score!</string>
    <string name="how_to_play">how to play</string>
    <string name="winner">winner!!!</string>
    <string name="new_score">new score!!!</string>
</resources>
