<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/score_board_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pic_score_board"
    android:padding="30dp">

    <TextView
        android:id="@+id/tv_create_board"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Score_board"
        android:gravity="center"
        android:textSize="40sp"
        android:layout_margin="10dp" />

    <LinearLayout
        android:id="@+id/mode_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/tv_create_board">

        <ImageButton
            android:id="@+id/btn_left_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_arrow_left"
            android:layout_gravity="center_vertical"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_mode_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_classic"
            android:gravity="center"
            android:textSize="30sp" />

        <ImageButton
            android:id="@+id/btn_right_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_arrow_right"
            android:layout_gravity="center_vertical"
            tools:ignore="ContentDescription" />
    </LinearLayout>
    <ListView
        android:id="@+id/lv_score_board"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_below="@id/mode_layout"
        android:layout_above="@+id/btn_close"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:background="@drawable/shape_rectangle_white"
        android:verticalScrollbarPosition="right"
        android:scrollbarThumbVertical="@color/colorPrimary"
        android:fadingEdgeLength="2dp" />

    <Button
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingHorizontal="60dp"
        android:paddingVertical="10dp"
        android:text="@string/close"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:background="@drawable/btn_rectangle_yellow"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"/>
</RelativeLayout>


