<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/pic_game_background_light">

    <RelativeLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="3dp"
        android:background="@drawable/pic_menu_top">
        <LinearLayout
            android:id="@+id/menu_first_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_alignParentTop="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="3dp"
                    android:gravity="center"
                    android:text="@string/best_score"
                    android:textColor="@color/valueEmpty"
                    android:textSize="30sp" />
                <TextView
                    android:id="@+id/tv_best_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/shape_oval_orange"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="15dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:minEms="3"
                    android:textColor="@color/valueEmpty"
                    android:textSize="25sp" />
            </LinearLayout>

        <TextView
            android:id="@+id/tv_current_score"
            android:layout_below="@+id/menu_first_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="80dp"
            android:layout_marginBottom="5dp"
            android:autoSizeTextType="uniform"
            android:maxLines="2"
            android:padding="3dp"
            android:text="@string/start"
            android:textAlignment="center"
            android:textColor="@color/valueEmpty"
            android:textSize="35sp"
            android:textStyle="italic"
            tools:ignore="UnusedAttribute" />

    </RelativeLayout>
    <ImageButton
        android:src="@drawable/icon_trophy"
        android:id="@+id/btn_Score_board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/btn_round_orange"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="12dp"
        android:layout_alignParentEnd="true"
        tools:ignore="ContentDescription" />
    <RelativeLayout
        android:id="@+id/game_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/menu"
        android:layout_above="@id/game_bar">

        <LinearLayout
            android:id="@+id/game_layout"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/gameboard_cell_shape"
            android:layout_centerInParent="true"
            android:padding="5dp"
            tools:ignore="UselessParent">

            <com.example.a2048game.Game.GameView
                android:id="@+id/game_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/game_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:paddingHorizontal="30dp"
        android:background="@drawable/pic_menu_bottom_bar"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="30dp"
        android:weightSum="4">

            <ImageButton
                android:src="@drawable/icon_home"
                android:id="@+id/btn_home"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/btn_round_white"
                tools:ignore="ContentDescription" />
            <ImageButton
                android:src="@drawable/icon_reset"
                android:id="@+id/btn_reset"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/btn_round_white"
                tools:ignore="ContentDescription" />
            <ImageButton
                android:src="@drawable/icon_undo"
                android:id="@+id/btn_undo"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/btn_round_white"
                tools:ignore="ContentDescription" />
            <ImageButton
                android:src="@drawable/icon_settings"
                android:id="@+id/btn_settings"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/btn_round_white"
                tools:ignore="ContentDescription" />
    </LinearLayout>

    <ImageView
        android:visibility="gone"
        android:id="@+id/dark_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#E62B2B2B"
        tools:ignore="ContentDescription" />

    <TextView
        android:visibility="gone"
        android:id="@+id/tv_announcing_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/shuffle"
        android:textSize="30sp"
        android:layout_above="@id/game_relative_layout"
        android:textColor="@color/value2"/>

    <TextView
        android:visibility="gone"
        android:id="@+id/tv_tutorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="15dp"
        android:textSize="25sp"
        android:textColor="@color/value2"/>
    <Button
        android:visibility="gone"
        android:id="@+id/btn_end_tutorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/end_tutorial"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:paddingHorizontal="30dp"
        android:background="@drawable/pic_menu_bottom_bar"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="30dp"/>


</RelativeLayout>
